fix blog button margin on mobiles

--- a/client/src/components/Web/Blog/PostInfo/PostInfo.scss
+++ b/client/src/components/Web/Blog/PostInfo/PostInfo.scss
@@ -151,7 +151,9 @@
 
     .ant-anchor{
         background-color: $negro-aparente;
-
+        @media (max-width: 950px) {
+            margin-bottom: 10%;
+        }
     }
 
     .ant-anchor-ink::before{
